# rusty

./: Cargo.toml  README.md
resources/: 404.html  hello.html
src/: lib.rs  main.rs  server.rs
tests/: http.rs
