[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = "0.5.3"
libc = "0.2"
log = "0.4"
env_logger = "0.10"
reqwest = {version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
